# flock-rs

./: Cargo.toml  LICENSE  Makefile.toml  README.md  index.html
.cargo/: config  config.toml
.github/workflows/: rust.yml
src/: fps_plugin.rs  main.rs  util.rs
src/plugins/: fps.rs  mod.rs  viewport_resize.rs
src/plugins/bidimensional/: flock.rs  mod.rs  movement.rs  velocity.rs
src/plugins/examples/: mod.rs  simple_flocking.rs
