[package]
name = "bevy_test"
version = "0.1.1"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = { version = "0.4", default-features = false }
bevy_webgl2 = { version = "0.4", optional = true }
rand = "0.8"
